--- a/dx.html
+++ b/dx.html
@@ -1674,7 +1674,7 @@ var cr = [[], [], [], [],
 		  <li id="mi1" onclick="activate_hamburger_menu(), activate_ui(), togglefullscreen()">Full screen</li>
 		  <li id="mi2" onclick="activate_hamburger_menu(), activate_ui(), downloadimage()">Download image</li>
 		  <li id="mi3" onclick="activate_hamburger_menu(), activate_ui(), criticalsnap()">Snap to critical radius</li>
-		  <li id="mi4" onclick="activate_hamburger_menu(), activate_ui(), recolor(false)">New color pallete</li>
+		  <li id="mi4" onclick="activate_hamburger_menu(), activate_ui(), recolor(false)">New color palette</li>
         <li id="mi5" onclick="toggle_pttype(), activate_hamburger_menu(), activate_ui(), doanim()">Image boundary</li>
 		  <li id="mi6" onclick="toggle_rotype(), update_rot_label(), activate_hamburger_menu(), activate_ui(), doanim()">Simulate single generator</li>
         <li id="mi7" onclick="toggle_user_guide()">Show/Hide user guide</li>
