Set the r slider midway after loading query params.

--- a/dx.html
+++ b/dx.html
@@ -1212,6 +1212,7 @@ case 'y':
          if (!sawqueryparam) {
             dorandom();
          } else {
+            set_r_slider();
             if (gotzoom) {
                doanim(3);
             } else {
