update kebab menu to so on start

--- a/dx.html
+++ b/dx.html
@@ -1564,7 +1564,7 @@ var cr = [[], [], [], [],
         background-color: #000000;
         border: 2px solid #4e4e4e;
         border-radius: 17%;
-        display: none;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
