update single generator to a'b

--- a/dx.html
+++ b/dx.html
@@ -1517,7 +1517,7 @@ var cr = [[], [], [], [],
       updateValue('mi6', 'Simulate single generator');
    }
    else{
-      updateValue('labelcontainer2', "generator = a b'");
+      updateValue('labelcontainer2', "generator = a'b");
       updateValue('mi6', 'Simulate compound symmetry');
    }
 
